# junction_site_parser

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  wget_steelnews.sh
constants/: constants.py
embeder/: chunker.py  embedder.py  pyproject.toml  retriever.py  vector_db.py
links_extractor/: articles_db.py  check_sql.py  links_extractor.py  pyproject.toml  text_extractor.py
links_extractor/data/: main.db
links_extractor/links/: links.txt
pg_db/: docker-compose.yaml
rag/: call_llm.py  pyproject.toml
telegram_client/: telegram_builder.py
telegram_client/app/: backend.py  client.py  keyboards.py
